# expflpro

./: .gitignore  README.md  create_virtual_environment.sh  pyproject.toml  requirements.txt
expflpro/: __init__.py  client_app.py  dataset.py  evaluate.py  explainer.py  graph.py  model.py  result.py  results.py  server_app.py  task.py
expmlpro/: centralized.py  generate_evaluations.py  generate_graphs.py  graphs.py
fl_model/: final_model.pkl
flwr-pro/: README.md  pyproject.toml  tasks.txt
flwr-pro/flwr_pro/: __init__.py  client_app.py  dataset.py  model.py  server_app.py  task.py
flwr-pro/flwr_pro/data/processed/: exercise_dataset.csv
flwr-pro/flwr_pro/results/: lime_multiclass_explanation.html
ml_model/: final_model.h5  final_model.keras
results/fl/client_0/explanations/: lime_explanations_for_user_0_recommendations.json  lime_explanations_for_user_14_recommendations.json  shap_explanations_for_user_0_recommendations.json  shap_explanations_for_user_14_recommendations.json
results/fl/client_0/overheads/: overhead_for_user_0_recommendation_explanations.json  overhead_for_user_14_recommendation_explanations.json
results/fl/client_0/recommendations/: recommendations_for_user_14.json
results/fl/evaluations/: 0_evaluations.json  1_evaluations.json  2_evaluations.json  3_evaluations.json  4_evaluations.json  5_evaluations.json  6_evaluations.json  7_evaluations.json  8_evaluations.json  9_evaluations.json  evaluation_metrics.json
results/ml/evaluations/: evaluation_metrics.json
results/ml/explanations/: lime_explanations_for_user_0_recommendations.json  lime_explanations_for_user_390_recommendations.json  lime_explanations_for_user_464_recommendations.json  shap_explanations_for_user_0_recommendations.json  shap_explanations_for_user_390_recommendations.json  shap_explanations_for_user_464_recommendations.json
results/ml/overheads/: overhead_for_user_0_recommendation_explanations.json  overhead_for_user_390_recommendation_explanations.json
results/ml/recommendations/: recommendations_for_user_0.json  recommendations_for_user_200.json  recommendations_for_user_390.json  recommendations_for_user_464.json  recommended_workouts_for256.json
src/: flower_test.py
(+98 files in other folders)
