[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expflpro"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "jayani"

[tool.flwr.app.components]
serverapp = "expflpro.server_app:app"
clientapp = "expflpro.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
penalty = "l2"
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
