[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-pro"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "jayani"

[tool.flwr.app.components]
serverapp = "flwr_pro.server_app:app"
clientapp = "flwr_pro.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.5
local-epochs = 10
num-partitions = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
